--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="mdui-collapse-item-body mdui-list">
         <a href="index.html" class="mdui-list-item mdui-ripple mdui-list-item-active">Home 首页</a>
 		<a href="status.html" class="mdui-list-item mdui-ripple">Status 服务器状态</a>
+	      <a href="https://bbs.leee.eu.org" class="mdui-list-item mdui-ripple">BBS 社区论坛</a>
         <a href="mailto:i@leee.eu.org" class="mdui-list-item mdui-ripple ">Email</a>
        
       </div>
